# rust_study

./: .gitignore  Cargo.toml
crates/axum-study/: Cargo.toml
crates/axum-study/src/: main.rs
crates/axum_study/: Cargo.toml
crates/basic-concept/: Cargo.toml
crates/basic-concept/src/: lib.rs  s_advanced.rs  s_closure.rs  s_control_flow.rs  s_data_type.rs  s_error.rs  s_genericity.rs  s_lifetime.rs  s_macro.rs  s_network.rs  s_option_result.rs  s_smart_pointer.rs  s_struct_trait.rs  s_thread.rs  s_tokio.rs  s_type.rs  s_unsafe.rs
crates/basic-concept/src/s_advanced/: future_executor.rs  s_async.rs  s_others.rs  s_sync.rs  timer_future.rs
crates/basic-concept/src/s_tokio/: tokio_1.rs
crates/basic-concept/tests/: data_type_test.rs  error_test.rs  pointer_test.rs  thread_test.rs  type_test.rs
crates/basic-utils/: Cargo.toml
crates/basic-utils/src/: lib.rs
crates/basic-utils/tests/: integration_test.rs
crates/basic_concept/: Cargo.toml
crates/basic_concept/src/: lib.rs  s_advanced.rs  s_closure.rs  s_control_flow.rs  s_data_type.rs  s_genericity.rs  s_iter.rs  s_lifetime.rs  s_macro.rs  s_option_result.rs  s_pattern_match.rs  s_pointer.rs  s_smart_pointer.rs  s_struct_trait.rs  s_thread.rs  s_tokio.rs  s_type.rs  s_unsafe.rs
crates/basic_concept/src/s_advanced/: future_executor.rs  s_async.rs  s_pin.rs  s_sync.rs
crates/basic_concept/tests/: async_test.rs  data_type_test.rs  macro_test.rs  pointer_test.rs  sync_test.rs  thread_test.rs  type_test.rs
crates/basic_utils/: Cargo.toml
crates/basic_utils/src/: lib.rs
crates/basic_utils/tests/: integration_test.rs
crates/hello-macro/: Cargo.toml
crates/hello-macro-derive/: Cargo.toml
crates/hello-rust/: Cargo.toml
crates/hello-rust/src/: main.rs
crates/hello-web-server/: Cargo.toml
crates/hello-web-server/src/: main.rs
crates/hello_macro/: Cargo.toml
crates/hello_macro/src/: lib.rs
crates/hello_macro_derive/: Cargo.toml
crates/hello_macro_derive/src/: lib.rs
crates/hello_rust/: Cargo.toml
crates/hello_rust/src/: main.rs
crates/hello_web_server/: Cargo.toml
crates/tokio-web-server/: Cargo.toml
crates/tokio-web-server/src/: main.rs
crates/tokio_web_server/: Cargo.toml
getting_started/: main
resources/: 404.html  index.html
src/: authentication.rs  base.rs  lib.rs  main.rs  s_unit_test.rs  test.rs
src/base/: s_closure.rs  s_data_type.rs  s_genericity.rs  s_iter.rs  s_lifecycle.rs  s_lifetime.rs  s_smart_pointer.rs  s_struct_trait.rs
tests/: integration_test.rs
