[workspace]
members = ["crates/*"]

[profile.dev]
opt-level=0

[profile.release]
opt-level=3

[workspace.dependencies]
# local crates
basic_concept = { path = "./crates/basic_concept", version = "0.0.0" }
basic_utils = { path = "./crates/basic_utils", version = "0.0.0" }
hello_macro = { path = "./crates/hello_macro", version = "0.0.0" }
hello_macro_derive = { path = "./crates/hello_macro_derive", version = "0.0.0" }
hello_rust = { path = "./crates/hello_rust", version = "0.0.0" }
