[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
# local crates
basic-concept = { path = "./crates/basic-concept", version = "0.0.0" }
basic-utils = { path = "./crates/basic-utils", version = "0.0.0" }
hello-macro = { path = "./crates/hello-macro", version = "0.0.0" }
hello-macro-derive = { path = "./crates/hello-macro-derive", version = "0.0.0" }
hello-rust = { path = "./crates/hello-rust", version = "0.0.0" }
axum-study = { path = "./crates/axum-study", version = "0.0.0" }
