[package]
name = "basic-concept"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
num = "0.4.0"
ahash = "0.8.7"
rand = "0.8.3"
basic-utils.workspace = true
hello-macro.workspace = true
hello-macro-derive.workspace = true
thread_local = "1.1.7"
lazy_static = "1.4.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
