[package]
name = "basic_concept"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
num = "0.4.0"
ahash = "0.8.7"
rand = "0.8.3"
basic_utils.workspace = true
hello_macro.workspace = true
hello_macro_derive.workspace = true
thread_local = "1.1.7"
lazy_static = "1.4.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
